[gd_scene load_steps=16 format=3 uid="uid://bxvfe2h3ur6ol"]

[ext_resource type="Script" path="res://map/room.gd" id="1_k281e"]
[ext_resource type="Texture2D" uid="uid://cyhjqf2e4ast" path="res://tempAssets/World/zero.png" id="2_dgx25"]
[ext_resource type="Texture2D" uid="uid://dkf6rnbpwdnay" path="res://tempAssets/World/doors/BotDoor.png" id="3_cgfv4"]
[ext_resource type="Texture2D" uid="uid://fyat7l76scsr" path="res://tempAssets/World/doors/LeftDoor.png" id="4_hjecd"]
[ext_resource type="Texture2D" uid="uid://btk0f6t0nv7k2" path="res://tempAssets/World/doors/TopDoor.png" id="5_6hrvb"]
[ext_resource type="Texture2D" uid="uid://c87xswjoaabdj" path="res://tempAssets/World/doors/RightDoor.png" id="6_m0tnp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_assl7"]
size = Vector2(310, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3cfp"]
size = Vector2(17, 138)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5g735"]
size = Vector2(310, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m1m3f"]
size = Vector2(17, 138)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgx51"]
size = Vector2(228.333, 95)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7bitr"]
size = Vector2(310, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dti14"]
size = Vector2(310, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2y876"]
size = Vector2(20, 137)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6nub4"]
size = Vector2(16, 137)

[node name="Room" type="Node2D"]
script = ExtResource("1_k281e")

[node name="Diego C" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(155, 69)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_dgx25")

[node name="Walls" type="StaticBody2D" parent="."]

[node name="BottomNoDoor" type="CollisionShape2D" parent="Walls"]
position = Vector2(155, 133)
shape = SubResource("RectangleShape2D_assl7")

[node name="RightNoDoor" type="CollisionShape2D" parent="Walls"]
position = Vector2(301.5, 69)
shape = SubResource("RectangleShape2D_i3cfp")

[node name="TopNoDoor" type="CollisionShape2D" parent="Walls"]
position = Vector2(155, 7)
shape = SubResource("RectangleShape2D_5g735")

[node name="LeftNoDoor" type="CollisionShape2D" parent="Walls"]
position = Vector2(8.5, 69)
shape = SubResource("RectangleShape2D_m1m3f")

[node name="TopLeftCorner" type="CollisionPolygon2D" parent="Walls"]
build_mode = 1
polygon = PackedVector2Array(0, 0, 130, 0, 138, 13, 17, 13, 17, 58, 0, 50)

[node name="TopRightCorner" type="CollisionPolygon2D" parent="Walls"]
position = Vector2(310, 0)
build_mode = 1
polygon = PackedVector2Array(0, 0, -131, 0, -136, 13, -17, 13, -17, 57, 0, 50)

[node name="BotLeftCorner" type="CollisionPolygon2D" parent="Walls"]
position = Vector2(0, 138)
polygon = PackedVector2Array(0, 0, 0, -56, 17, -62, 17, -10, 136, -10, 131, 0)

[node name="BotRightCorner" type="CollisionPolygon2D" parent="Walls"]
position = Vector2(310, 138)
build_mode = 1
polygon = PackedVector2Array(0, 0, 0, -56, -17, -62, -17, -10, -138, -10, -135, 0)

[node name="Play Area" type="Area2D" parent="."]
position = Vector2(155, 69)
scale = Vector2(1.2, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play Area"]
position = Vector2(0, 1.66666)
shape = SubResource("RectangleShape2D_pgx51")
debug_color = Color(0.694118, 0.286275, 1, 0.419608)

[node name="North" type="Area2D" parent="." groups=["RoomScanners"]]
position = Vector2(154, -11)

[node name="CollisionShape2D" type="CollisionShape2D" parent="North"]
position = Vector2(1, 2.5)
shape = SubResource("RectangleShape2D_7bitr")
debug_color = Color(0.827451, 0, 0.956863, 0.419608)

[node name="South" type="Area2D" parent="." groups=["RoomScanners"]]
position = Vector2(155, 142)

[node name="CollisionShape2D" type="CollisionShape2D" parent="South"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_dti14")
debug_color = Color(0.862745, 0, 0.862745, 0.419608)

[node name="East" type="Area2D" parent="." groups=["RoomScanners"]]
position = Vector2(318, 70)

[node name="CollisionShape2D" type="CollisionShape2D" parent="East"]
position = Vector2(2, -1)
shape = SubResource("RectangleShape2D_2y876")
debug_color = Color(0.807843, 0.00392157, 0.996078, 0.419608)

[node name="West" type="Area2D" parent="." groups=["RoomScanners"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="West"]
position = Vector2(-8, 69.5)
shape = SubResource("RectangleShape2D_6nub4")
debug_color = Color(0.819608, 0, 0.968627, 0.419608)

[node name="BotDoor" type="Sprite2D" parent="."]
visible = false
position = Vector2(154, 132.5)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_cgfv4")

[node name="LeftDoor" type="Sprite2D" parent="."]
visible = false
position = Vector2(9.2, 65)
scale = Vector2(1.2, 1.2)
texture = ExtResource("4_hjecd")

[node name="TopDoor" type="Sprite2D" parent="."]
visible = false
position = Vector2(156, 7.3)
scale = Vector2(1.2, 1.2)
texture = ExtResource("5_6hrvb")

[node name="RightDoor" type="Sprite2D" parent="."]
visible = false
position = Vector2(300.8, 67)
scale = Vector2(1.2, 1.2)
texture = ExtResource("6_m0tnp")

[connection signal="body_entered" from="Play Area" to="." method="_on_play_area_body_entered"]
[connection signal="area_entered" from="North" to="." method="_on_north_area_entered"]
